// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-index-signature.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Invalid, but recoverable
class C {
  declare [key: string]: string;
}

=====================================output=====================================
// Invalid, but recoverable
class C {
  declare [key: string]: string;
}

================================================================================
`;

exports[`invalid-modifiers.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface Foo {
  private a();
  public b();
  protected c();
  static d();
  declare e();
  abstract f();
  readonly g();
}

class Bar {
  declare e() {};
  abstract f() {};
  readonly g() {};
}

=====================================output=====================================
interface Foo {
  private a();
  public b();
  protected c();
  static d();
  declare e();
  abstract f();
  readonly g();
}

class Bar {
  declare e() {}
  abstract f() {}
  readonly g() {}
}

================================================================================
`;

exports[`ts-4.2-abstract-constructor-type.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// typescript-estree does not support abstract constructor type yet
type T = abstract new () => void;
type T = abstract    new () => void;
type T = abstract
  new () => void;

=====================================output=====================================
// typescript-estree does not support abstract constructor type yet
type T = abstract new () => void;
type T = abstract new () => void;
type T = abstract new () => void;

================================================================================
`;

exports[`tuple-labeled-ts.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Invalid label 1
type T = [x.y: A];

// Invalid label 2
type T = [x<y>: A];

=====================================output=====================================
// Invalid label 1
type T = [x.y: A];

// Invalid label 2
type T = [x<y>: A];

================================================================================
`;
